<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BanglaHadith</string>
    <string name="action_settings">সেটিংস</string>
    <string name="text_all_hadiths">হাদিস সমূহ</string>
    <string name="text_all_books">গ্রন্থ সমূহ</string>
    <string name="title_activity_hadith_detail_list">HadithDetailList</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hadith_list">হাদিস সমূহ</string>
    <string name="title_activity_book_chapter_list">BookChapterListActivity</string>
    <string name="title_activity_hadith_detail">HadithDetailActivity</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="explanation">ব্যাখ্যা</string>
    <string name="hadith_number">হাদিস নম্বরঃ</string>
    <string name="report_hadith">রিপোর্ট</string>
    <string name="rabi">রাবীঃ</string>
    <string name="hadith_status">হাদিসের মানঃ</string>
    <string name="action_about_us">আমাদের সম্পর্কে</string>
    <string name="action_favorite">পছন্দের তালিকা</string>
    <string name="action_data_sync">তথ্য হালনাগাদ</string>
    <string name="action_donation">সহযোগিতা করতে</string>
    <string name="action_latest_update">সর্বশেষ তথ্য</string>
    <string name="share_title">হাদিসটি কিভাবে শেয়ার করতে চান?</string>
    <string name="share_title_email">ইমেইল-এর মাধ্যমে হাদিসটি শেয়ার করুন</string>
    <string name="report_hadith_title">হাদিসটি  রিপোর্ট করুন</string>
    <string name="text_internet_connection_failed">Internet connection is not available right now, please try again later.</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="chapter_bangla">অধ্যায়ঃ</string>
    <string name="book_list_prefix_text">অনুচ্ছেদঃ</string>
    <string name="hadith_list_prefix_text">হাদিসঃ</string>
    <string name="text_count_suffix">" টি"</string>
    <string name="copyright_text">All right reserved</string>
    <string name="title_activity_book_category_list">BookCategoryListActivity</string>
    <string name="book_category_preffix_text">বইঃ</string>
    <string name="book_question_prefix">পরিচ্ছদঃ</string>
    <string name="contact">যোগাযোগ</string>
    <string name="owner_name">খোন্দকার রোকন-উল-হক</string>
    <string name="owner_phone">+৮৮ ০১৭১ ৪১১ ০৬৩০</string>
    <string name="owner_mail">info@hadithbd.com</string>
    <string name="owner_web">www.hadithbd.com</string>
    <string name="owner_name_en">Kh. Rokon-UL-Haque</string>
    <string name="about_app">অ্যাপ সম্পর্কে</string>
    <string name="app_version">Version</string>
    <string name="app_developer">Developed By: Apptitive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donation">বাংলা হাদিসকে সহযোগিতা করুন</string>
    <string name="donation_detail">এটি সম্পূর্ণ ব্যক্তি উদ্যোগে পরিচালিত। আপনাদের সহযোগিতা আমাদের প্রজেক্ট সমূহের কাজকে ত্বরান্বিত করবে।</string>
    <string name="bkash_account">বিকাশ একাউন্ট</string>
    <string name="bkash_acc_no">01714110630 (Personal)</string>
    <string name="islami_bank">ইসলামী ব্যাংক বাংলাদেশ লিমিটেড</string>
    <string name="uttara_branch">উত্তরা শাখা</string>
    <string name="ibbl_ac_name">A/C Name: Kh. Rokonul Haque</string>

    <string name="search_title_text">অনুসন্ধান করুন</string>
    <string name="search_from_hadith">হাদিস সমূহ থেকে</string>
    <string name="search_from_book">গ্রন্থ সমূহ থেকে</string>
    <string name="search_with_hadith_number">হাদিস নম্বর দিয়ে অনুসন্ধান করুন</string>
    <string name="search_with_plain_text">টেক্সট দিয়ে অনুসন্ধান করুন</string>
    <string name="search_hadith_book">হাদিস গ্রন্থঃ</string>
    <string name="search_all_book">সকল গ্রন্থ</string>
    <string name="search_favorite_book">পছন্দের গ্রন্থ</string>
    <string name="title_activity_book_qn">BookQnActivity</string>
    <string name="online_donate">অনলাইন ডোনেশন</string>
    <string name="hadith_search_type">হাদিস টাইপ</string>

</resources>
