<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hadithbd.banglahadith.ui.DonationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_margin="@dimen/dp_10"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_20"
            android:orientation="vertical">

            <com.hadithbd.banglahadith.views.BanglaTextView
                android:id="@+id/btv_contact"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/hadith_detail_chapter_name_min_height"
                android:background="@color/white_50"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_12"
                android:textColor="@android:color/black"
                app:banglaText="@string/donation"
                android:textSize="20sp" />

            <com.hadithbd.banglahadith.views.BanglaTextView
                android:background="@color/white_80"
                android:layout_marginTop="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20"
                android:id="@+id/btv_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:textColor="@android:color/black"
                app:banglaText="@string/donation_detail"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20"
                android:orientation="horizontal"
                android:background="@color/white_50">

                <ImageView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_bkash" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.hadithbd.banglahadith.views.BanglaTextView
                        android:id="@+id/btv_bkash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_12"
                        android:textColor="@android:color/black"
                        app:banglaText="@string/bkash_account"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_12"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:text="@string/bkash_acc_no"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_50"
                android:layout_marginTop="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_50"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_9"
                        android:src="@drawable/ic_ibbl" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.hadithbd.banglahadith.views.BanglaTextView
                            android:id="@+id/btv_islami_bank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_12"
                            android:textColor="@android:color/black"
                            app:banglaText="@string/islami_bank"
                            android:textSize="16sp" />

                        <com.hadithbd.banglahadith.views.BanglaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_12"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            app:banglaText="@string/uttara_branch"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@android:color/black"
                    android:text="@string/ibbl_ac_name"
                    android:paddingLeft="@dimen/dp_12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="A/C No (For direct deposit)  : 38805"
                    android:paddingLeft="@dimen/dp_12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="A/C No (For online transfer) : 2050 2070 2038805 02"
                    android:paddingLeft="@dimen/dp_12" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20"
                android:orientation="horizontal"
                android:background="@color/white_50">

                <com.hadithbd.banglahadith.views.BanglaTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_12"
                    android:textColor="@android:color/black"
                    app:banglaText="@string/online_donate"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/btn_online_donate"
                    android:layout_width="400dp"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_report_btn"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/hadith_detail_report_icon_size"
                        android:layout_height="@dimen/hadith_detail_report_icon_size"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitCenter"
                        android:src="@drawable/report" />

                    <com.hadithbd.banglahadith.views.BanglaTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:banglaText="অনলাইনে ডোনেট করতে" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>